--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,24 @@
 .App {
-  text-align: center;
+  margin: 0px 0px;
+  padding: 0px 0px;
+}
+.navbar {
+  color: white !important;
+  justify-content: left;
+  font-size: 20px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.col-4{
+  padding-right: 0px !important; 
+  padding-left: 0px !important; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.col-8{
+  padding-right: 0px !important; 
+  padding-left: 0px !important; 
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 1200px){
+.container {
+    max-width: 1330px !important;
   }
 }
