--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
   color: white !important;
   justify-content: left;
   font-size: 20px;
+  width: 1365px;
+  box-shadow: 2px 2px 5px #999;
 }
 
 .col-4{
@@ -20,5 +22,6 @@
 @media (min-width: 1200px){
 .container {
     max-width: 1330px !important;
+   
   }
 }
